Add Indian cuisine recipes

--- a/recipe/indian-cuisine/index.html
+++ b/recipe/indian-cuisine/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Indian Cuisine Recipes</title>
@@ -15,8 +15,30 @@
                     <img src="./images/butter-chicken.jpg" alt="Butter Chicken">
                 </a>
             </li>
-
-            
+            <li>
+                <h2>Dish 2: Biryani</h2>
+                <a href="biryani.html">
+                    <img src="./images/Biryani.jpg" alt="Biryani">
+                </a>
+            </li>
+            <li>
+                <h2>Dish 3: Paneer Tikka</h2>
+                <a href="paneer-tikka.html">
+                    <img src="./images/Paneer-Tikka.jpg" alt="Paneer Tikka">
+                </a>
+            </li>
+            <li>
+                <h2>Dish 4: Masala Dosa </h2>
+                <a href="masala-dosa.html">
+                    <img src="./images/Masal-dosa.jpg" alt="Masala Dosa">
+                </a>
+            </li>
+            <li>
+                <h2>Dish 5: Chole Bhature</h2>
+                <a href="chole-bhature.html">
+                    <img src="./images/chole-bhature.jpg" alt="Chole Bhature">
+                </a>
+            </li>
         </ul>
     </body>
 </html>
