Add Arabian  cuisine recipes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h2>Cuisines</h2>
         <ul>
             <li><a href="./recipe/indian-cuisine/index.html" target="_blank">Indian Cuisine</a></li>
+            <li><a href="./recipe/arabian-cuisine/index..html" target="_blank">Arabian Cuisine</a></li>
         </ul>
     </body>
 </html>
