Add Chinese  cuisine recipes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipe/indian-cuisine/index.html" target="_blank">Indian Cuisine</a></li>
             <li><a href="./recipe/arabian-cuisine/index..html" target="_blank">Arabian Cuisine</a></li>
+            <li><a href="./recipe/chinese-cuisine/index.html" target="_blank">Chinese Cuisine</a></li>
         </ul>
     </body>
 </html>
