feat: Add new recipes in the recipe folder

--- a/recipe/arabian-cuisine/index..html
+++ b/recipe/arabian-cuisine/index..html
@@ -11,33 +11,23 @@
         <ul>
             <li>
                 <h2>Dish 1: Hummus</h2>
-                <a href="hummus.html">
-                    <img src="./images/hummus.jpg" alt="Hummus">
-                </a>
+                <a href="hummus.html">Hummus</a>
             </li>
             <li>
                 <h2>Dish 2: Falafel</h2>
-                <a href="falafel.html">
-                    <img src="./images/falafel.jpg" alt="Falafel">
-                </a>
+                <a href="falafel.html">Falafel</a>
             </li>
             <li>
-                <h2>Dish 3: Shawarma </h2>
-                <a href="shawarma.html">
-                    <img src="./images/shawarma.jpg" alt="Shawarma">
-                </a>
+                <h2>Dish 3: Shawarma</h2>
+                <a href="shawarma.html">Shawarma</a>
             </li>
             <li>
-                <h2>Dish 4: Tabbouleh </h2>
-                <a href="tabbouleh.html">
-                    <img src="./images/tabbouleh.jpg" alt="Tabbouleh">
-                </a>
+                <h2>Dish 4: Tabbouleh</h2>
+                <a href="tabbouleh.html">Tabbouleh</a>
             </li>
             <li>
                 <h2>Dish 5: Mansaf</h2>
-                <a href="mansaf.html">
-                    <img src="./images/Mansaf.jpg" alt="Mansaf">
-                </a>
+                <a href="mansaf.html">Mansaf</a>
             </li>
         </ul>
     </body>
