--- a/recipe/chinese-cuisine/index.html
+++ b/recipe/chinese-cuisine/index.html
@@ -11,33 +11,23 @@
         <ul>
             <li>
                 <h2>Dish 1: Peking Duck </h2>
-                <a href="peking-duck.html">
-                    <img src="./images/peking-duck-recipe.jpg" alt="Peking Duck">
-                </a>
+                <a href="peking-duck.html">Peking Duck</a>
             </li>
             <li>
                 <h2>Dish 2: Kung Pao Chicken </h2>
-                <a href="kung-pao-chicken.html">
-                    <img src="./images/Kung-Pao-Chicken.jpg" alt="Kung Pao Chicken">
-                </a>
+                <a href="kung-pao-chicken.html">Kung Pao Chicken</a>
             </li>
             <li>
                 <h2>Dish 3: Mapo Tofu </h2>
-                <a href="mapo-tofu.html">
-                    <img src="./images/Mapo-Tofu.jpg" alt="Mapo Tofu">
-                </a>
+                <a href="mapo-tofu.html">Mapo Tofu</a>
             </li>
             <li>
                 <h2>Dish 4: Dim Sum </h2>
-                <a href="dim-sum.html">
-                    <img src="./images/dim-sum.png" alt="Dim Sum">
-                </a>
+                <a href="dim-sum.html">Dim Sum</a>
             </li>
             <li>
                 <h2>Dish 5: Hot Pot </h2>
-                <a href="hot-pot.html">
-                    <img src="./images/hot-pot.jpeg" alt="Hot Pot">
-                </a>
+                <a href="hot-pot.html">Hot Pot</a>
             </li>
         </ul>
     </body>
