--- a/recipe/indian-cuisine/index.html
+++ b/recipe/indian-cuisine/index.html
@@ -11,33 +11,23 @@
         <ul>
             <li>
                 <h2>Dish 1: Butter Chicken</h2>
-                <a href="butter-chicken.html">
-                    <img src="./images/butter-chicken.jpg" alt="Butter Chicken">
-                </a>
+                <a href="butter-chicken.html">Butter Chicken</a>
             </li>
             <li>
                 <h2>Dish 2: Biryani</h2>
-                <a href="biryani.html">
-                    <img src="./images/Biryani.jpg" alt="Biryani">
-                </a>
+                <a href="biryani.html">Biryani</a>
             </li>
             <li>
                 <h2>Dish 3: Paneer Tikka</h2>
-                <a href="paneer-tikka.html">
-                    <img src="./images/Paneer-Tikka.jpg" alt="Paneer Tikka">
-                </a>
+                <a href="paneer-tikka.html">Paneer Tikka</a>
             </li>
             <li>
                 <h2>Dish 4: Masala Dosa </h2>
-                <a href="masala-dosa.html">
-                    <img src="./images/Masal-dosa.jpg" alt="Masala Dosa">
-                </a>
+                <a href="masala-dosa.html">Masala Dosa </a>
             </li>
             <li>
                 <h2>Dish 5: Chole Bhature</h2>
-                <a href="chole-bhature.html">
-                    <img src="./images/chole-bhature.jpg" alt="Chole Bhature">
-                </a>
+                <a href="chole-bhature.html">Chole Bhature</a>
             </li>
         </ul>
     </body>
