fix(index): Update arabian cuisine and fix

--- a/recipe/arabian-cuisine/index..html
+++ b/recipe/arabian-cuisine/index..html
@@ -12,23 +12,23 @@
         <ul>
             <li>
                 <h2>Dish 1: Hummus</h2>
-                <a href="./hummus/hummus.html">Hummus</a>
+                <a href="hummus.html">Hummus</a>
             </li>
             <li>
                 <h2>Dish 2: Falafel</h2>
-                <a href="./falafel/falafel.html">Falafel</a>
+                <a href="falafel.html">Falafel</a>
             </li>
             <li>
                 <h2>Dish 3: Shawarma</h2>
-                <a href="./shawarma/shawarma.html">Shawarma</a>
+                <a href="shawarma.html">Shawarma</a>
             </li>
             <li>
                 <h2>Dish 4: Tabbouleh</h2>
-                <a href="tabbouleh/tabbouleh.html">Tabbouleh</a>
+                <a href="tabbouleh.html">Tabbouleh</a>
             </li>
             <li>
                 <h2>Dish 5: Mansaf</h2>
-                <a href="./mansaf/mansaf.html">Mansaf</a>
+                <a href="mansaf.html">Mansaf</a>
             </li>
         </ul>
     </body>
